--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,33 @@
-$bg : lightGrey;
+/*IMPORT */ 
+@import './nav';
 
+
+/* Variable */ 
+$hoverColor : rgb(236, 116, 247);
+
+
+/* Global Code */ 
+* {
+    box-sizing: border-box;
+    margin : 0;
+    padding : 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
-    background : $bg;
+    width : 100%;
+    overflow-x: hidden;
+    font-family : Montserrat;
+    background : black;
+    overflow-x: hidden;
+    
 }
 
-img {
-    width : 300px;
+a {
+    color : inherit;
+    text-decoration: none;
 }
+
