--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,10 +5,237 @@
     justify-content: center;
     align-items : center;
 
+    @media (max-width: 600px) {
+        height :50px;   
+    }
+
     h1 {
         font-size : 3rem;
         color : #fff;
         text-transform: uppercase;
+
+        @media (max-width: 600px) {
+            font-size : 2rem;
+        }
     }
+}
+
+
+/*  HEADER  */ 
+.container-video {
+    position : relative;
+    width : 100%;
+    min-height : 100vh;
+    background-color : #eeee;
+    padding : 5rem;
+
+
+    .container-miniature-gauche{
+        position : absolute ; 
+        top : 0;
+        left : 0;
+        background : black;
+        padding : 10px;
+        width :40%;
+        height : 100%;
+        display : flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index : 1000;
+        
+        
+        @media (max-width: 1400px) {
+           flex-direction : column;
+           
+            
+        }
+
+        .imggauche {
+            width : 250px;
+            height : 400px;
+            background : midnightblue;
+
+            @media (max-width : 900px) {
+                width :150px;
+                height : 150px;
+            }
+          
+        }
+
+        .image-square-container {
+            width : 50%;
+            height : 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            @media (max-width: 1400px) {
+                justify-content: space-around ;
+                
+             }
+
+             
+        }
+
+        .image-square{
+            width : 200px;
+            height : 200px;
+            background : midnightblue;
+
+            @media (max-width : 900px) {
+                width :150px;
+                height : 150px;
+            }
+        }
+    }
+    
+    .container-miniature-droit  {
+        position : absolute ; 
+        top : 0;
+        right : 0;
+        background : black;
+        padding : 10px;
+        width :40%;
+        height : 100%;
+        display : flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index : 1000;
+
+
+        @media (max-width: 1400px) {
+             flex-direction : column;
+            
+             
+         }
+        .imggauche {
+            width : 250px;
+            height : 400px;
+            background : midnightblue;
+
+            @media (max-width : 900px) {
+                width :150px;
+                height : 150px;
+            }
+        }
+
+        .image-square-container {
+            width : 50%;
+            height : 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        .image-square{
+            width : 200px;
+            height : 200px;
+            background : midnightblue;
+
+            @media (max-width : 900px) {
+                width :150px;
+                height : 150px;
+            }
+
+           
+        }
+    }
+    
+}
+
+    
+
+   
+/* MESSAGE DEFILANT */
+.container-msg {
+    display : flex;
+    overflow : hidden;
+    width : 60%;
+}
+
+.txt{
+    white-space : nowrap;
+    font-size : 6rem;
+    /* margin : 0 2rem; */
+    text-transform: uppercase;
+    font-family: Arial;
+    -webkit-text-stroke-width:1px;
+    -webkit-text-stroke-color: #fff;
+    color : rgba(255,255,255,0);
+    animation : titleAnim 5s linear infinite
+}
+
+@keyframes titleAnim {
+    0% {
+        transform : translateX(0%);
+    }
+
+    100% {
+        transform : translateX(-100%);
+    }
+} 
+
+
+
+/* VIDEO PLAYER */
+
+#videoplyr {
+    position :absolute;
+    top : 50%;
+    left : 50%;
+    transform : translate(-50%, -50%);
+    width : 100%;
+    min-height : 100vh;
+    background : black;
+    overflow : hidden;
+    display : flex;
+    justify-content: center; 
+    align-items : center;
+    background : green;
+    
+    
+
+}
+
+#videoplyr video {
+    height : 60%;
+    
+    position : absolute;
+    top : 50%; 
+    left : 50%; 
+    transform: translate(-50%, -50%) scale(1.2);
+
+}
+
+#videoplyr .subtittle {
+    /* z-index : 1000;
+    position : absolute; */
+    opacity : 0;
+    font-size : 4rem;
+    
+}
+#main #one {
+    // background-image : url(./images/portrait_max1.jpg);
+    background-size : cover;
+}
+
+#main #sx {
+    // background-image : url(./images/portrait_max2.jpg);
+    background-size : cover;
+}
+
+#main #two, #main #three {
+    // background-image : url(./images/cover.jpg);
+    background-size : cover;
+}
+#main #fr, #main #fv {
+    // background-image : url(./images/cover.jpg);
+    background-size : cover;
+}
+
+#main #videoplyr {
+
 }
 
