--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -50,6 +50,7 @@
         align-items: center;
         justify-content: space-between;
         z-index : 1000;
+        opacity : 1;
         
         
         @media (max-width: 1400px) {
@@ -201,14 +202,14 @@
     display : flex;
     justify-content: center; 
     align-items : center;
-    background : green;
+    
     
     
     @media (max-width: 900px) {
         
    height : 60vh;
         top : 228px;
-        background : green;
+        
         // display : none;
     }
 
