--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -28,12 +28,12 @@
     position : relative;
     width : 100%;
     height : 100vh;
-    background-color : #eeee;
+    background-color : black;
     padding : 5rem;
-    background : violet;
+    
 
     @media (max-width : 900px) {
-        height : 60vh;
+        height : 70vh;
       
     }
 
