--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,10 @@
 @import './nav';
 @import './header';
 @import './glitch';
+@import './tilteGlitch';
 @import './section';
+@import './sectionVideos';
+
 
 
 /* Variable */ 
