--- a/src/styles/_glitch.scss
+++ b/src/styles/_glitch.scss
@@ -2,6 +2,7 @@
     font-size: 6rem;
     font-weight : 700;
     text-transform : uppercase;
+    text-align : center;
 /* animation : wiggle 0.4s; */
     /* text-shadow : 
         0.05em 0 0 rgba(255,0,0,.75), -0.025em -0.05em 0 rgba(0,255,0, .75), 0.025em 0.05em 0 rgba(0,0,255, .75); */
