--- a/src/styles/_sectionVideos.scss
+++ b/src/styles/_sectionVideos.scss
@@ -1,11 +1,6 @@
 .video {
     height : 100vh;
-    max-width : 1600px;
-    /* display : grid ;
-    grid-template-columns :  1fr 1fr;
-    justify-items: center; */
-    padding-top : 5rem;
-    /* margin : 0 auto ; */
+    width : 100%;
     background-color : black;
     padding : 0 40px;
     text-align : center;
@@ -16,6 +11,10 @@
     height : 100%;
     display : flex;
     justify-content: space-between;
+
+    @media (max-width : 900px) {
+        flex-direction : column;
+    }
 }
 
 .wrapper-artist {
@@ -23,6 +22,8 @@
     width : 500px;
     height :300px;
     overflow : hidden;
+    margin : 20px 0;
+
 
     &:hover .title-aside{
         opacity : 1;
