--- a/src/styles/_sectionVideos.scss
+++ b/src/styles/_sectionVideos.scss
@@ -1,5 +1,5 @@
 .video {
-    height : 100vh;
+    min-height : 100vh;
     width : 100%;
     background-color : black;
     padding : 0 40px;
@@ -14,6 +14,7 @@
     width : 100%;
     height : 100%;
     display : flex;
+    flex-wrap : wrap;
     justify-content: space-evenly;
     align-items: center;
   
