--- a/src/styles/_tilteGlitch.scss
+++ b/src/styles/_tilteGlitch.scss
@@ -52,3 +52,8 @@
         -0.050em 0 0 rgba(255,0,0,.75), -0.050em -0.075em 0 rgba(0,255,0, .75), -0.025em -0.05em 0 rgba(0,0,255, .75)
     }
 }
+
+.glitchstart {
+    animation : glitch2 500ms infinite;
+    filter: blur(1.5px);
+}
