--- a/src/styles/_tilteGlitch.scss
+++ b/src/styles/_tilteGlitch.scss
@@ -57,3 +57,7 @@
     animation : glitch2 500ms infinite;
     filter: blur(1.5px);
 }
+.titleGlitch.titlePrincipal{
+    font-size : 4rem;
+    
+}
