--- a/src/styles/_sectionVideos.scss
+++ b/src/styles/_sectionVideos.scss
@@ -26,18 +26,16 @@
 
     @media (max-width : 600px) {
         width : 360px;
-        
         overflow : hidden;
     }
 }
 
 .wrapper-artist {
     position : relative;
-    width : 500px;
-    height :300px;
+    width : 350px;
+    height :230px;
     overflow : hidden;
     margin : 20px 0;
-
 
     &:hover .title-aside{
         opacity : 1;
@@ -45,15 +43,15 @@
 }
 
 .img-artist{
-    width : 500px;
-    height : 300px;
+    width : 100%;
+    height : 100%;
     object-fit: cover;
 }
 
 .block-text {
     position : absolute;
-    top : 20%;
-    left : 10%;
+    top : 5%;
+    left : 5%;
     color : #fff;
 }
 
@@ -61,11 +59,11 @@
     display : flex;
     width : 100%;
     align-items : center;
-    margin-bottom : 5rem;
+    margin-bottom : 4rem;
 }
 .btn-play {
-    width : 20px;
-    height : 20px;
+    width : 25px;
+    height : 25px;
     padding  : 0.2rem;
     margin-right : 1rem;
     background : none;
@@ -74,17 +72,20 @@
 }
 
 .title-video {
-    font-size : 0.7rem;
+    font-size : 0.8rem;
     font-weight : 400;
 }
 
 .genre{
     text-transform : uppercase;
     position : relative;
+    font-size : 1.2rem;
+   
+    width : 280px;
 }
 
 h2 {
-    font-size : 2rem;
+    font-size : 1.8rem;
     text-transform: uppercase;;
     color : #fff;
     -webkit-text-stroke-width:1px;
@@ -96,10 +97,10 @@ h2 {
 .genre::before {
     content : '';
     position : absolute; 
-    left : 50px;
+    left : 5%;
     bottom : 11px;
     height : 3px;
-    width : 200px;
+    width : 95%;
     background : #fff;
     opacity : 0.6;
 }
@@ -108,23 +109,25 @@ h2 {
     content : '';
     position : absolute;
     top : 0px;
-    left :50px;
+    left   :13px;
     opacity : 0.6;
     width : 20px;
     height : 20px;
     background : rgb(236, 116, 247);
     clip-path: polygon(100% 50%, 0 0, 0 100%);
     transition : 0.8s ease;
+   
 }
 
 .title-aside {
     position : absolute;
-    right : 5%;
-    font-size : 1.8rem;
+    right : 2%;
+    font-size : 1.5rem;
     font-weight : 600;
     text-transform : uppercase;
     letter-spacing : 3px;
-    top : 30%;
+    top : 20%;
+    
     color : #fff;
     writing-mode: vertical-lr;
     opacity : 0 ;
@@ -137,10 +140,6 @@ h2 {
 
 
 
-
-
-
-
 .img-artist {
     width : 100%;
     transition : 0.8s ease;
@@ -148,7 +147,7 @@ h2 {
 }
 
 .wrapper-artist:hover .genre:after{
-    transform : translateX(200px);
+    transform : translateX(250px);
 }
 
 .wrapper-artist:hover .img-artist {
