--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -7,6 +7,10 @@ nav {
     width : 100%;
     background : black;
     padding : 0 5%;
+    position : fixed ;
+    top : 10px;
+    right : 10px;
+    
 }
 .nav {
     color : white;
@@ -15,9 +19,8 @@ nav {
     align-items : center;
     list-style: none;
     justify-content: flex-end;
-   
     font-size : 10rem;
-    
+   
     @media (max-width: 600px) {
         justify-content: center
     }
@@ -30,7 +33,7 @@ nav {
         margin-right : 0 20px ;
         padding : 0 10px;
         cursor : pointer;
-        font-size : 1.1rem;
+        font-size : 0.8rem;
         font-weight : 600;
         text-transform: uppercase;
         transition : 0.3s ease-in-out;
