--- a/src/styles/_sectionVideos.scss
+++ b/src/styles/_sectionVideos.scss
@@ -1,5 +1,5 @@
 .video {
-    min-height : 100vh;
+    height :100vh;
     width : 100%;
     background-color : black;
     padding : 0 40px;
@@ -7,12 +7,13 @@
     display : flex;
     flex-direction: column;
     align-items: center;
+    background : red;
     
 }
 
 .wrapper-clips {
     width : 100%;
-    height : 100%;
+    height : 100vh;
     display : flex;
     flex-wrap : wrap;
     justify-content: space-evenly;
