--- a/src/styles/_tilteGlitch.scss
+++ b/src/styles/_tilteGlitch.scss
@@ -5,6 +5,7 @@
     text-transform : uppercase;
     display : inline-block;
     opacity : 1;
+    padding-top : 5rem
     /* text-shadow : 
         0.05em 0 0 rgba(255,0,0,.75), -0.025em -0.05em 0 rgba(0,255,0, .75), 0.025em 0.05em 0 rgba(0,0,255, .75); */
 }
