--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,10 @@
 @import './header';
 @import './glitch';
 @import './tilteGlitch';
-@import './section';
-@import './sectionVideos';
-@import './video1';
-@import './songs';
+// @import './section';
+// @import './sectionVideos';
+// @import './video1';
+// @import './songs';
 
 
 
