--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,3 +1,12 @@
+header {
+    width : 100%;
+    height :100vh;
+
+    // @media (max-width : 767px) {
+    //     // height : auto;
+    // }
+}
+
 .header-text {
     width : 100%;
     height : 200px;
@@ -5,17 +14,24 @@
     justify-content: center;
     align-items : center;
 
-    @media (max-width: 900px) {
-        height : 50px;
-      
+    @media (min-width : 768px) and (max-width: 1200px) {
+        height : 200px;
+    }
+
+    @media (max-width : 768px) {
+        height : 150px;
+    }
+
+    @media (max-width: 530px) {
+        height : 120px;
     }
 
     h1 {
-        font-size : 3rem;
+        font-size : 4rem;
         color : #fff;
         text-transform: uppercase;
 
-        @media (max-width: 900px) {
+        @media (max-width: 767px) {
             font-size : 2rem;
         }
     }
@@ -25,17 +41,18 @@
 .container-video {
     position : relative;
     width : 100%;
-    height : 100vh;
+    height : 80%;
     background-color : black;
-    padding : 5rem;
-    
-    @media (max-width : 900px) {
-        max-height : 250px;
-        background : yellow;
-      
+    padding : 0 5rem;
+
+    @media (max-width: 767px) {
+        height : 400px;
+    }
+
+    @media (max-width: 530px) {
+        height : 300px;
     }
   
-
     .container-miniature-gauche{
         position : absolute ; 
         top : 0;
@@ -50,16 +67,20 @@
         z-index : 1000;
         opacity : 1;
         
-        @media (max-width: 900px) {
+        @media (min-width : 768px) and (max-width: 1200px) {
             flex-direction : column;
+        }
+
+        @media (max-width : 767px){
             display : none;
         }
+
         .imggauche {
             width : 250px;
             height : 400px;
             background : midnightblue;
 
-            @media (max-width : 900px) {
+            @media (min-width : 768px) and (max-width: 1200px) {
                 width :150px;
                 height : 150px;
             }
@@ -73,7 +94,7 @@
             align-items: center;
             justify-content: space-around;
 
-            @media (max-width: 900px) {
+            @media (min-width : 768px) and (max-width: 1200px) {
                 justify-content: space-around ;
             }
         }
@@ -83,7 +104,7 @@
             height : 200px;
             background : midnightblue;
 
-            @media (max-width : 900px) {
+            @media (min-width : 768px) and (max-width: 1200px) {
                 width :150px;
                 height : 150px;
             }
@@ -103,8 +124,11 @@
         justify-content: space-between;
         z-index : 1000;
 
-        @media (max-width: 900px) {
+        @media (min-width : 768px) and (max-width: 1200px) {
             flex-direction : column;
+        }
+
+        @media (max-width : 767px) {
             display : none;
         }
 
@@ -113,7 +137,7 @@
             height : 400px;
             background : midnightblue;
 
-            @media (max-width : 900px) {
+            @media (min-width : 768px) and (max-width: 1200px) {
                 width :150px;
                 height : 150px;
             }
@@ -133,7 +157,7 @@
             height : 200px;
             background : midnightblue;
 
-            @media (max-width : 900px) {
+            @media (min-width : 768px) and (max-width: 1200px) {
                 width :150px;
                 height : 150px;
             }
@@ -145,14 +169,16 @@
 
 /* MESSAGE DEFILANT */
 .container-msg {
+    position : relative;
     display : flex;
     overflow : hidden;
-    width : 60%;
+    width : 100%;
+    z-index : 99;
 }
 
 .txt{
     white-space : nowrap;
-    font-size : 6rem;
+    font-size : 4rem;
     /* margin : 0 2rem; */
     text-transform: uppercase;
     font-family: Arial;
@@ -161,8 +187,8 @@
     color : rgba(255,255,255,0);
     animation : titleAnim 5s linear infinite;
 
-   @media (max-width : 900px) {
-       font-size : 3rem;
+   @media (max-width : 767px) {
+       font-size : 2rem;
    }
 }
 
@@ -183,23 +209,36 @@
     top : 50%;
     left : 50%;
     transform : translate(-50%, -50%);
-    width : 100%;
-    height : 100vh;
-    background : black;
+    width : 650px;
+    height : 400px;
+    background : orange;
     overflow : hidden;
     display : flex;
     justify-content: center; 
     align-items : center;
     
-    @media (max-width: 900px) {
-        max-height : 250px;
-       
+    @media (max-width : 1200px) {
+        width : 480px;
+        height : 350px;
+    }
+
+    @media (max-width: 767px){
+        // width : 100%;
+        // height : 100%;
         
+    }
+
+    @media (max-width : 530px) {
+        width :350px;
+        height : 230px
     }
 }
 
 #videoplyr img {
-    height : 60%;
+   width : 100%;
+   height : 100%;
+  
+
     position : absolute;
     top : 50%; 
     left : 50%; 
