--- a/src/styles/_sectionVideos.scss
+++ b/src/styles/_sectionVideos.scss
@@ -8,6 +8,10 @@
     flex-direction: column;
     align-items: center;
     background : red;
+
+    @media (max-width : 900px ) {
+        height : auto;
+    }
     
 }
 
